apps/fuck/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: fuck
    backstage.io/kubernetes-id: fuck
  name: fuck
spec:
  finalizers:
  - kubernetes
