apps/fuck/base/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: fuck
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: fuck
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: fuck
        version: 1.0.0
    spec:
      containers:
      - name: fuck
        image: diegoluisi/fuck:latest
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health-check/liveness
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health-check/readiness
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    canary:
      canaryService: fuck-canary
      stableService: fuck-stable
      # analysis will be performed in background, while rollout is progressing through its steps
      analysis:
        startingStep: 1   # index of step list, of when to start this analysis
        templates:
        - templateName: fuck-istio-success-rate
        args:             # arguments allow AnalysisTemplates to be re-used
        - name: service
          value: fuck-canary-svc
        - name: namespace
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
      trafficRouting:
        istio:
          virtualService:
            name: fuck-vsvc
            routes:
            - primary
      steps:
      - setWeight: 10
      - pause: {duration: 20s} #{} pause indefinitely
      - setWeight: 20
      - pause: {duration: 20s}
      - setWeight: 30
      - pause: {duration: 20s}
      - setWeight: 40
      - pause: {duration: 20s}
      - setWeight: 50
      - pause: {duration: 20s}
      - setWeight: 60
      - pause: {duration: 20s}
      - setWeight: 70
      - pause: {duration: 20s}
      - setWeight: 80
      - pause: {duration: 20s}
      - setWeight: 90
      - pause: {duration: 20s}
