apps/fuck/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: fuck.diegoluisi.eti.br
  labels:
    app: fuck
    backstage.io/kubernetes-id: fuck
  name: fuck-canary
  namespace: fuck
spec:
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: fuck
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: fuck.diegoluisi.eti.br
  labels:
    app: fuck
    backstage.io/kubernetes-id: fuck
  name: fuck-stable
  namespace: fuck
spec:
  ports:
  - name: tcp-node
    port: 8080
  selector:
    app: fuck
  type: ClusterIP
