apps/fuck/base/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fuck-vsvc
  namespace: fuck
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - fuck.diegoluisi.eti.br
  - fuck.local
  http:
  - name: primary
    route:
    - destination:
        host: fuck-stable-svc
      weight: 100
    - destination:
        host: fuck-canary-svc
      weight: 0
